--- a/app/src/declaration/view/sections/declaration.html
+++ b/app/src/declaration/view/sections/declaration.html
@@ -130,7 +130,7 @@
             md-items="secretary in propertyFilter(propertyValues['secretary'],secretarySearch)"
             md-item-text="secretary"
             md-min-length="0"
-            md-floating-label="Sekretær"
+            md-floating-label="Aktuddrag"
             ng-disabled="!editPatientData"
             md-clear-button="editPatientData"
             md-require-match="true">
