--- a/app/src/system_settings/practitioners/view/list-edit-user.html
+++ b/app/src/system_settings/practitioners/view/list-edit-user.html
@@ -2,7 +2,7 @@
     <form name="renameForm" ng-submit="updateUser()">
         <md-toolbar>
             <div class="md-toolbar-tools">
-                <h2>{{selectedUserFirstName}} {{selectedUserLastName}}</h2>
+                <h2>{{selecteUserFirstName}} {{selectedUserLastName}}</h2>
                 <span flex></span>
                 <md-button class="md-icon-button" ng-click="cancel()">
                     <i class="material-icons" aria-label="Luk dialogboks">close</i>
