--- a/app/src/documents/view/documentActions.html
+++ b/app/src/documents/view/documentActions.html
@@ -174,7 +174,7 @@ background-color: #e1e1e1;
         <div ng-show="vm.showBackToEmail">
         <md-button ng-click="vm.backToEmail()" class="md-text-icon-button md-primary">
             <md-icon md-menu-align-target>arrow_back</md-icon>
-            {{'COMMON.BACK.TOEMAIL' | translate }}
+            {{'COMMON.BACK_TOEMAIL' | translate }}
         </md-button>
         </div>
 
