--- a/app/src/system_settings/practitioners/view/list-edit-user.html
+++ b/app/src/system_settings/practitioners/view/list-edit-user.html
@@ -20,7 +20,7 @@
 
             <md-input-container class="md-block">
                 <label>Tekst</label>
-                <textarea ng-model="signatureText" ></textarea>
+                <textarea class="textarea-highlight" ng-model="signatureText" rows="3" ></textarea>
             </md-input-container>
 
 
