--- a/app/src/system_settings/practitioners/view/list-edit-user.html
+++ b/app/src/system_settings/practitioners/view/list-edit-user.html
@@ -16,7 +16,7 @@
                  <md-checkbox aria-label="aktiveret" ng-model="bua">BUA Bruger</md-checkbox>
             </md-input-container>
 
-            Signatur: <md-button ng-click="openDialog()">upload ny fil</md-button>
+            Signatur: <md-button ng-click="openDialog()"> {{ 'SIGNATUR.UPLOAD' | translate}}  </md-button>
 
             <md-input-container class="md-block">
                 <label>Tekst</label>
