--- a/app/src/app.scss
+++ b/app/src/app.scss
@@ -14,6 +14,11 @@ $gray-60: #999;
 $gray-40: #666;
 $gray-20: #333;
 
+.div1 {
+  display: inline-block;
+}
+
+
 $rm-primary: rgb(153, 0, 51);
 //$primary-color: rgb(63, 81, 181);
 $primary-color: $rm-primary;
