--- a/app/src/system_settings/practitioners/view/list-edit-user.html
+++ b/app/src/system_settings/practitioners/view/list-edit-user.html
@@ -49,7 +49,8 @@
 
 
             <div class="cropArea md-block" ng-show="showCropFunction" style="margin-top: 100px">
-                <ui-cropper  area-type="rectangle" image="elphoto" result-image="myCroppedImage" result-image-format="image/jpeg" result-image-size='{w: 340,h: 200}' init-max-area="true" aspect-ratio="0"></ui-cropper>
+<!--                <ui-cropper  area-type="rectangle" image="elphoto" result-image="myCroppedImage" result-image-format="image/jpeg" result-image-size='{w: 340,h: 200}' init-max-area="true" aspect-ratio="0"></ui-cropper>-->
+                <ui-cropper  area-type="rectangle" aspect-ratio="0" image="elphoto" result-image="myCroppedImage" result-image-format="image/png" result-image-size='{w: 740,h: 800}' init-max-area="true" aspect-ratio="0" ></ui-cropper>
                 <md-button ng-click="cropIt(myCroppedImage)" >{{"crop.button.save"|translate}}</md-button>
             </div>
 
