added signature info

--- a/app/src/system_settings/practitioners/view/practitioner-list.html
+++ b/app/src/system_settings/practitioners/view/practitioner-list.html
@@ -52,7 +52,11 @@ table.md-table:not(.md-row-select) th.md-column:nth-child(n+2):nth-last-child(n+
 
                 <tbody md-body>
                     <tr md-row ng-repeat="user in allUsers | orderBy: query.order" ng-if="user.userName!='admin'" >
-                        <td md-cell ng-click="updateBUA(user.userName, user.firstName, user.lastName, user.oprettet)" class="clickable" >{{user.firstName}} {{user.lastName}}  {{user.bua}} ({{user.signatureAdded}})</td>
+
+
+
+                        <td md-cell ng-click="updateBUA(user.userName, user.firstName, user.lastName, user.oprettet)" class="clickable"  >    {{user.firstName}} {{user.lastName}} {{user.signatureAdded}} {{user.bua}}  </td>
+
                         <td md-cell>
                             <md-checkbox aria-label="aktiveret" ng-model="user.active"></md-checkbox>
                         </td>
@@ -71,6 +75,7 @@ table.md-table:not(.md-row-select) th.md-column:nth-child(n+2):nth-last-child(n+
                         <td md-cell>
                             <md-checkbox aria-label="Oprette dokumentskabeloner" ng-model="user.GROUP_site_retspsyk_TemplateFolderValueManager"></md-checkbox>
                         </td>
+
                     </tr>
                 </tbody>
             </table>
