fix for broken download of reports with zero hits

--- a/app/src/declaration/view/unLock-dialog.html
+++ b/app/src/declaration/view/unLock-dialog.html
@@ -23,7 +23,7 @@
 
         <md-dialog-actions>
             <md-button ng-disabled="lockDeclarationForm.$invalid" type="submit" class="md-primary md-text-icon-button">
-                <md-icon>lock_open</md-icon> {{'DECLARATION.UNLOCK' | translate}}
+                <md-icon>lock_open</md-icon> {{'DECLARATION.UNLOCK_BOTTON' | translate}}
             </md-button>
         </md-dialog-actions>
     </form>
