ready for feedback from retpsyk

--- a/app/src/authentication/view/login.html
+++ b/app/src/authentication/view/login.html
@@ -26,7 +26,7 @@
 
                 <div layout="column" layout-align="start center">
 
-                    <md-button type="submit" class="md-raised md-primary"
+                    <md-button id="loginbutton" type="submit" class="md-raised md-primary"
                                ng-click="vm.login(vm.credentials)"
                                ng-disabled="vm.form.$invalid">
                         {{ 'LOGIN.LOGIN' | translate }}
