--- a/app/src/documents/view/documentActions.html
+++ b/app/src/documents/view/documentActions.html
@@ -165,7 +165,7 @@ background-color: #e1e1e1;
         </div>
 
 
-        <div ng-show="!vm.showBackToEmail && !vm.showBackToReport">
+        <div ng-show="!vm.showBackToEmail && !vm.showBackToReport && !vm.showBackToSearch">
             <md-button ng-click="vm.back()" class="md-text-icon-button md-primary">
                 <md-icon md-menu-align-target>arrow_back</md-icon>
                 {{'COMMON.BACK' | translate }}
@@ -179,10 +179,13 @@ background-color: #e1e1e1;
         </md-button>
         </div>
 
+
         <div ng-show="vm.showBackToReport">
             <md-button ng-click="vm.backToReport()" class="md-text-icon-button md-primary">
                 <md-icon md-menu-align-target>arrow_back</md-icon>
                 {{'COMMON.BACK_TOREPORT' | translate }}
+            </md-button>
+        </div>
 
         <div ng-show="vm.showBackToSearch">
             <md-button ng-click="vm.backToSearch()" class="md-text-icon-button md-primary">
