ready for ex test

--- a/app/src/system_settings/practitioners/view/list-edit-user.html
+++ b/app/src/system_settings/practitioners/view/list-edit-user.html
@@ -85,7 +85,7 @@
         </md-dialog-content>
 
         <md-dialog-actions>
-            <md-button type="submit" class="md-primary" ng-disabled="renameForm.$invalid" aria-label="{{'COMMON.RENAME' | translate}}">{{'COMMON.SAVE' | translate}}</md-button>
+            <md-button type="submit" class="md-primary" aria-label="{{'COMMON.RENAME' | translate}}">{{'COMMON.SAVE' | translate}}</md-button>
         </md-dialog-actions>
     </form>
 </md-dialog>
