--- a/app/src/declaration/view/sections/basic-info.html
+++ b/app/src/declaration/view/sections/basic-info.html
@@ -15,9 +15,8 @@
             </md-button>
         </div>
 
-        <md-checkbox id="flowhighlight"  class="checkbox style-2 pull-right" ng-disabled="!editPatientData"  ng-model="case.flowflag">Marker i flowchart</md-checkbox>
-
-
+        <md-checkbox id="flowhighlight"  class="checkbox style-2 pull-right" ng-disabled="!editPatientData"  ng-model="case.flowflag">Opprioritering af sag</md-checkbox>
+i
 
         <md-input-container class="md-block">
             <label>Fornavne</label>
