--- a/app/src/declaration/view/declaration.html
+++ b/app/src/declaration/view/declaration.html
@@ -1,3 +1,19 @@
+<style>
+  .mailtestheader {
+
+    text-align: center;
+    width: 200px;
+  }
+  .mailtest {
+      padding: 5px;
+      text-align: left;
+      width: 200px;
+      padding-left: 15px;
+  }
+
+
+</style>
+
 <div layout="row">
     <div flex-gt-md="10" flex="15">
         <md-button class="md-text-icon-button" aria-label="edit" ui-sref="declaration.show.patientdata">
@@ -8,10 +24,23 @@
             <md-icon>insert_drive_file</md-icon> Dokumenter
         </md-button>
 
+        <div ng-show="showMailAttachments" >
+            <table><tr class="mailtestheader"><td><b>Filer til mail</b></td></tr>
+                <tr><td><br></td></tr>
+                <tr ng-repeat="c in duf" content="duf" ><td class="mailtest"> {{ c.name }} </td>
+            </table>
+
+            <md-button class="md-text-icon-button" aria-label="edit" ng-click="clearList()">
+                 nulstil
+            </md-button>
+        </div>
+
     </div>
 
     <div flex>
         <div ui-view='declarations'></div>doc
     </div>
+
+
 </div>
 
