--- a/app/src/declaration/view/declaration.html
+++ b/app/src/declaration/view/declaration.html
@@ -1,11 +1,25 @@
 <style>
   .mailtestheader {
-
+    position: relative;
     text-align: center;
     width: 200px;
+     margin-top: 25px;
   }
+
+  .md-buttonmini {
+      width: 15px;
+      height: 20px;
+      line-height: 20px;
+      min-height: 20px;
+      vertical-align: top;
+      font-size: 10px;
+      padding: 0 0;
+      margin: 0;
+  }
+
   .mailtest {
-      padding: 5px;
+      position: relative;
+      padding: 15px;
       text-align: left;
       width: 200px;
       padding-left: 15px;
@@ -24,21 +38,39 @@
             <md-icon>insert_drive_file</md-icon> Dokumenter
         </md-button>
 
-        <div ng-show="showMailAttachments" >
-            <table><tr class="mailtestheader"><td><b>Filer til mail</b></td></tr>
+<!--        <div ng-show="showMailAttachments" >-->
+        <div class="mailtestheader" >
+            <table><tr ><td><b>Filer til mail</b></td></tr>
                 <tr><td><br></td></tr>
                 <tr ng-repeat="c in duf" content="duf" ><td class="mailtest"> {{ c.name }} </td>
             </table>
 
-            <md-button class="md-text-icon-button" aria-label="edit" ng-click="clearList()">
-                 nulstil
-            </md-button>
+
+            <div class="row">
+                <form layout layout-align="center" layout-padding>
+                    <div layout="row" flex>
+
+                        <div>
+                            <md-button class="md-buttonmini"  ng-click="clearList()">
+                                <!-- below is the material icons -->
+                                <md-icon class="material-icons">delete</md-icon>
+                            </md-button>
+                        </div>
+                        <div>
+                            <md-button class="md-buttonmini" ng-click="authorityMailDialogMulti()"">
+                                <!-- below is the material icons -->
+                                send
+                            </md-button>
+                        </div>
+                    </div>
+                </form>
+            </div>
         </div>
 
     </div>
 
     <div flex>
-        <div ui-view='declarations'></div>doc
+        <div ui-view='declarations'></div>
     </div>
 
 
