--- a/app/src/declaration/view/declaration.html
+++ b/app/src/declaration/view/declaration.html
@@ -4,7 +4,11 @@
             <md-icon>assignment</md-icon> Patient data
         </md-button>
 
-        <md-button class="md-text-icon-button" aria-label="edit" ui-sref="declaration.show.documents({init: 'true' })">
+<!--        <md-button class="md-text-icon-button" aria-label="edit" ui-sref="declaration.show.documents({init: 'true' })">-->
+<!--            <md-icon>insert_drive_file</md-icon> Dokumenter-->
+<!--        </md-button>-->
+
+        <md-button class="md-text-icon-button" aria-label="edit" ng-click="gotoDocuments()">
             <md-icon>insert_drive_file</md-icon> Dokumenter
         </md-button>
 
