wip - works with hardcoded token

--- a/app/src/documents/view/document.html
+++ b/app/src/documents/view/document.html
@@ -2,7 +2,7 @@
 	<div layout="row">
 		<md-card flex="75">
 			<md-card-content>
-				<div>
+				<div id="printMe">
 					<ng-include src="viewerTemplateUrl"></ng-include>
 				</div>
 			</md-card-content>
@@ -13,3 +13,5 @@
 		</div>
 	</div>
 </div>
+
+
