--- a/app/src/declaration/view/declaration.html
+++ b/app/src/declaration/view/declaration.html
@@ -42,6 +42,10 @@
             <md-icon>insert_drive_file</md-icon> Dokumenter
         </md-button>
 
+        <md-button class="md-text-icon-button" aria-label="edit" ng-click="gotoPsyc()">
+            <md-icon>insert_drive_file</md-icon> PsycPoc
+        </md-button>
+
 <!--        <div ng-show="showMailAttachments" >-->
         <div class="mailtestheader" >
             <table><tr ><td><b>Filer til mail</b></td></tr>
