--- a/app/src/declaration/view/psyc/sections/popup.html
+++ b/app/src/declaration/view/psyc/sections/popup.html
@@ -7,44 +7,45 @@
     <md-card-content>
         <div layout="row">
 
-            <md-input-container class="md-block">
-                <md-checkbox aria-label="aktiveret" ng-model="bua1">PSE-10</md-checkbox>
-            </md-input-container>
-            <md-input-container class="md-block">
-                <md-checkbox aria-label="aktiveret" ng-model="bua2">PANSS</md-checkbox>
-            </md-input-container>
-            <md-input-container class="md-block">
-                <md-checkbox aria-label="aktiveret" ng-model="bua3">EASE</md-checkbox>
-            </md-input-container>
+
+            <div>
+                <div ng-repeat="i in vm.items" | chunkBy: 3 >
+                    <md-input-container class="md-block">
+                        <md-checkbox aria-label="aktiveret" ng-model="i.id"> {{i.name}} </md-checkbox>
+                    </md-input-container>
+                </div>
+            </div>
+
+
 
         </div>
 
-        <div layout="row">
+<!--        <div layout="row">-->
 
-            <md-input-container class="md-block">
-                <md-checkbox aria-label="aktiveret" ng-model="bua4">MAS</md-checkbox>
-            </md-input-container>
-            <md-input-container class="md-block">
-                <md-checkbox aria-label="aktiveret" ng-model="bua5">BDI-II</md-checkbox>
-            </md-input-container>
-            <md-input-container class="md-block">
-                <md-checkbox aria-label="aktiveret" ng-model="bua6">HAM-D</md-checkbox>
-            </md-input-container>
+<!--            <md-input-container class="md-block">-->
+<!--                <md-checkbox aria-label="aktiveret" ng-model="bua4">MAS</md-checkbox>-->
+<!--            </md-input-container>-->
+<!--            <md-input-container class="md-block">-->
+<!--                <md-checkbox aria-label="aktiveret" ng-model="bua5">BDI-II</md-checkbox>-->
+<!--            </md-input-container>-->
+<!--            <md-input-container class="md-block">-->
+<!--                <md-checkbox aria-label="aktiveret" ng-model="bua6">HAM-D</md-checkbox>-->
+<!--            </md-input-container>-->
 
-        </div>
+<!--        </div>-->
 
-        <div layout="row">
+<!--        <div layout="row">-->
 
-            <md-input-container class="md-block">
-                <md-checkbox aria-label="aktiveret" ng-model="bua7">BAI</md-checkbox>
-            </md-input-container>
-            <md-input-container class="md-block">
-                <md-checkbox aria-label="aktiveret" ng-model="bua8">HAM-A</md-checkbox>
-            </md-input-container>
-            <md-input-container class="md-block">
-                <md-checkbox aria-label="aktiveret" ng-model="bua9">Y-BOCS</md-checkbox>
-            </md-input-container>
+<!--            <md-input-container class="md-block">-->
+<!--                <md-checkbox aria-label="aktiveret" ng-model="bua7">BAI</md-checkbox>-->
+<!--            </md-input-container>-->
+<!--            <md-input-container class="md-block">-->
+<!--                <md-checkbox aria-label="aktiveret" ng-model="bua8">HAM-A</md-checkbox>-->
+<!--            </md-input-container>-->
+<!--            <md-input-container class="md-block">-->
+<!--                <md-checkbox aria-label="aktiveret" ng-model="bua9">Y-BOCS</md-checkbox>-->
+<!--            </md-input-container>-->
 
-        </div>
+<!--        </div>-->
     </md-card-content>
 </md-card>
