--- a/app/src/declaration/view/psyc/sections/psykunder.html
+++ b/app/src/declaration/view/psyc/sections/psykunder.html
@@ -12,7 +12,7 @@
                 <input ng-model="case.cprNumber" maxlength="10" minlength="10" ng-disabled="!editPatientData" name="cprNo">
             </md-input-container>
 
-            <md-button class="md-icon-button" ng-click="vm.viewButton()" ">
+            <md-button class="md-icon-button" ng-click="vm.viewButton(vm.PROP_PSYC_LIBRARY_PSYCH_TYPE)" ">
                 <md-icon>edit</md-icon>
             </md-button>
 
