--- a/app/src/declaration/view/psyc/sections/undersogelsesintrumenter.html
+++ b/app/src/declaration/view/psyc/sections/undersogelsesintrumenter.html
@@ -1,7 +1,7 @@
 <md-card>
     <md-card-title>
         <md-card-title-text>
-            <span class="md-headline">Anvendte undersøgelsesinstrumenter </span>
+            <span class="md-headline">undersøgelsesinstrumenter</span>
         </md-card-title-text>
     </md-card-title>
     <md-card-content>
@@ -12,7 +12,7 @@
                 <input ng-model="case.cprNumber" maxlength="10" minlength="10" ng-disabled="!editPatientData" name="cprNo">
             </md-input-container>
 
-            <md-button class="md-icon-button" ng-click="vm.viewButton()" ">
+            <md-button class="md-icon-button" ng-click="vm.viewButton(vm.PROP_PSYC_LIBRARY_INTERVIEWRATING)" ">
                 <md-icon>edit</md-icon>
             </md-button>
 
@@ -25,7 +25,7 @@
                 <input ng-model="case.cprNumber" maxlength="10" minlength="10" ng-disabled="!editPatientData" name="cprNo">
             </md-input-container>
 
-            <md-button class="md-icon-button" ng-click="vm.viewButton()" ">
+            <md-button class="md-icon-button" ng-click="vm.viewButton(vm.PROP_PSYC_LIBRARY_KOGNITIV)" ">
             <md-icon>edit</md-icon>
             </md-button>
 
@@ -38,7 +38,7 @@
                 <input ng-model="case.cprNumber" maxlength="10" minlength="10" ng-disabled="!editPatientData" name="cprNo">
             </md-input-container>
 
-            <md-button class="md-icon-button" ng-click="vm.viewButton()" ">
+            <md-button class="md-icon-button" ng-click="vm.viewButton(vm.PROP_PSYC_LIBRARY_IMPLECITE)" ">
             <md-icon>edit</md-icon>
             </md-button>
 
