--- a/app/src/declaration/view/psyc/sections/popup.html
+++ b/app/src/declaration/view/psyc/sections/popup.html
@@ -18,9 +18,9 @@
 <!--                        <input id="{{ block[0].id }}" type="checkbox" ng-model="vm.selectedValues.block[0].id" ng-click="vm.clicked(block[0].id, $event)" /><label  title="Tolk" >{{block[0].name}}  {{block[0].id}} </label>-->
 <!--                        <input id="{{ block[1].id }}" type="checkbox" ng-model="block[1].id"  ng-click="vm.clicked(block[1].id, $event)" /><label  title="Tolk" >{{block[1].name}}  {{block[1].id}} </label>-->
 <!--                        <input id="{{ block[2].id }}" type="checkbox" ng-model="block[2].id"  ng-click="vm.clicked(block[2].id, $event)" /><label  title="Tolk" >{{block[2].name}} {{block[2].id}} </label>-->
-                        <md-checkbox aria-label="aktiveret"  ng-model="myCountry.selected[block[0].id]" ng-true-value="true" ng-false-value="false" >{{block[0].name}}</md-checkbox>
-                        <md-checkbox aria-label="aktiveret"  ng-model="myCountry.selected[block[1].id]" ng-true-value="true" ng-false-value="false"> {{block[1].name}}</md-checkbox>
-                        <md-checkbox aria-label="aktiveret"  ng-model="myCountry.selected[block[2].id]" ng-true-value="true" ng-false-value="false"> {{block[2].name}}</md-checkbox>
+                        <md-checkbox aria-label="aktiveret"  ng-model="myCountry.selected[block[0].id]"  ng-true-value="true" ng-false-value="false" >{{block[0].label}}</md-checkbox>
+                        <md-checkbox aria-label="aktiveret"  ng-model="myCountry.selected[block[1].id]" ng-true-value="true" ng-false-value="false"> {{block[1].label}}</md-checkbox>
+                        <md-checkbox aria-label="aktiveret"  ng-model="myCountry.selected[block[2].id]" ng-true-value="true" ng-false-value="false"> {{block[2].label}}</md-checkbox>
 <!--                        <md-checkbox aria-label="aktiveret"  ng-click="vm.clicked(block[1].id)"> {{block[1].name}} {{block[1].id}} </md-checkbox>-->
 <!--                        <md-checkbox aria-label="aktiveret"  ng-click="vm.clicked(block[2].id)"> {{block[2].name}} {{block[2].id}} </md-checkbox>-->
 
