--- a/app/src/declaration/view/declaration.html
+++ b/app/src/declaration/view/declaration.html
@@ -43,7 +43,7 @@
         </md-button>
 
         <md-button class="md-text-icon-button" aria-label="edit" ng-click="gotoPsyc()">
-            <md-icon>insert_drive_file</md-icon> PsycPoc
+            <md-icon>insert_drive_file</md-icon> Psykolog
         </md-button>
 
 <!--        <div ng-show="showMailAttachments" >-->
