--- a/app/src/declaration/view/psyc/sections/malering.html
+++ b/app/src/declaration/view/psyc/sections/malering.html
@@ -1,14 +1,14 @@
 <md-card>
     <md-card-title>
         <md-card-title-text>
-            <span class="md-headline">Psykologisk undersøgelsestype</span>
+            <span class="md-headline">Psykologisk vurdering af forekomst af malingering</span>
         </md-card-title-text>
     </md-card-title>
     <md-card-content>
         <div layout="row">
 
             <md-input-container class="md-block" flex>
-                <label>psykologisk undersøgelsestype</label>
+                <label>Psykologisk vurdering af forekomst af malingering</label>
                 <input ng-model="vm.PsycInstruments" maxlength="10" minlength="10" name="cprNo">
             </md-input-container>
 
