--- a/app/src/declaration/view/psyc/sections/basic-info.html
+++ b/app/src/declaration/view/psyc/sections/basic-info.html
@@ -1,8 +1,17 @@
-<form name="$root.declarationForm" ng-hide="isLoading">
+<form name="psyc" ng-hide="isLoading">
     <div layout="row" layout-wrap>
-        <div layout="column" flex-gt-sm="250" flex-sm="50" flex="100">
+
+        <div layout="column"  flex="100">
             <ng-include src="'app/src/declaration/view/psyc/sections/psykunder.html'"></ng-include>
             <ng-include src="'app/src/declaration/view/psyc/sections/undersogelsesintrumenter.html'"></ng-include>
+        </div>
+
+        <div layout="column"  flex="100">
+            <ng-include src="'app/src/declaration/view/psyc/sections/malering.html'"></ng-include>
+        </div>
+
+        <div layout="column"  flex="100">
+            <ng-include src="'app/src/declaration/view/psyc/sections/malering.html'"></ng-include>
         </div>
 
 <!--        <div layout="column" flex-gt-sm="25" flex-sm="50" flex="100">-->
