--- a/app/src/declaration/view/psyc/sections/undersogelsesintrumenter.html
+++ b/app/src/declaration/view/psyc/sections/undersogelsesintrumenter.html
@@ -1,7 +1,7 @@
 <md-card>
     <md-card-title>
         <md-card-title-text>
-            <span class="md-headline">undersøgelsesinstrumenter</span>
+            <span class="md-headline">Undersøgelsesinstrumenter</span>
         </md-card-title-text>
     </md-card-title>
     <md-card-content>
@@ -39,6 +39,45 @@
             </md-input-container>
 
             <md-button class="md-icon-button" ng-click="vm.viewButton(vm.PROP_PSYC_LIBRARY_IMPLECITE)" ">
+            <md-icon>edit</md-icon>
+            </md-button>
+
+        </div>
+
+        <div layout="row">
+
+            <md-input-container class="md-block" flex>
+                <label>Eksplicitte (spørgeskema) tests</label>
+                <input ng-model="case.cprNumber" maxlength="10" minlength="10" ng-disabled="!editPatientData" name="cprNo">
+            </md-input-container>
+
+            <md-button class="md-icon-button" ng-click="vm.viewButton(vm.PROP_PSYC_LIBRARY_EXPLICIT)" ">
+            <md-icon>edit</md-icon>
+            </md-button>
+
+        </div>
+
+        <div layout="row">
+
+            <md-input-container class="md-block" flex>
+                <label>Instrumenter for indikation på malingering</label>
+                <input ng-model="case.cprNumber" maxlength="10" minlength="10" ng-disabled="!editPatientData" name="cprNo">
+            </md-input-container>
+
+            <md-button class="md-icon-button" ng-click="vm.viewButton(vm.PROP_PSYC_LIBRARY_MALERING)" ">
+            <md-icon>edit</md-icon>
+            </md-button>
+
+        </div>
+
+        <div layout="row">
+
+            <md-input-container class="md-block" flex>
+                <label>Risikovurderingsinstrumenter</label>
+                <input ng-model="case.cprNumber" maxlength="10" minlength="10" ng-disabled="!editPatientData" name="cprNo">
+            </md-input-container>
+
+            <md-button class="md-icon-button" ng-click="vm.viewButton(vm.PROP_PSYC_LIBRARY_RISIKO)" ">
             <md-icon>edit</md-icon>
             </md-button>
 
