--- a/app/src/declaration/view/psyc/info.html
+++ b/app/src/declaration/view/psyc/info.html
@@ -1,6 +1,6 @@
 <form name="$root.declarationForm" ng-hide="isLoading">
     <div layout="row" layout-wrap>
-        <div layout="column" flex-gt-sm="25" flex-sm="50" flex="100">
+        <div layout="column" flex-gt-sm="265" flex="100">
             <ng-include src="'app/src/declaration/view/psyc/sections/basic-info.html'"></ng-include>
         </div>
     </div>
