--- a/app/src/declaration/view/psyc/sections/popup.html
+++ b/app/src/declaration/view/psyc/sections/popup.html
@@ -2,14 +2,12 @@
 <md-card>
     <md-card-title>
         <md-card-title-text>
-            <span class="md-headline">{{vm.selectedInstrumentName}} <md-button ng-click="vm.save()"> gem</md-button> </span>
+            <div>
+            <span class="md-headline">{{vm.selectedInstrumentName}} <md-button ng-click="vm.save()"> gem</md-button> </span> <md-button class="md-icon-button" ng-click="vm.cancelDialog()"><md-icon>close</md-icon></md-button>
+            </div>
         </md-card-title-text>
     </md-card-title>
     <md-card-content>
-
-
-
-
         <div layout="row">
 
             <div>
@@ -18,9 +16,11 @@
 <!--                        <input id="{{ block[0].id }}" type="checkbox" ng-model="vm.selectedValues.block[0].id" ng-click="vm.clicked(block[0].id, $event)" /><label  title="Tolk" >{{block[0].name}}  {{block[0].id}} </label>-->
 <!--                        <input id="{{ block[1].id }}" type="checkbox" ng-model="block[1].id"  ng-click="vm.clicked(block[1].id, $event)" /><label  title="Tolk" >{{block[1].name}}  {{block[1].id}} </label>-->
 <!--                        <input id="{{ block[2].id }}" type="checkbox" ng-model="block[2].id"  ng-click="vm.clicked(block[2].id, $event)" /><label  title="Tolk" >{{block[2].name}} {{block[2].id}} </label>-->
-                        <md-checkbox aria-label="aktiveret"  ng-model="myCountry.selected[block[0].id]"  ng-true-value="true" ng-false-value="false" >{{block[0].label}}</md-checkbox>
-                        <md-checkbox aria-label="aktiveret"  ng-model="myCountry.selected[block[1].id]" ng-true-value="true" ng-false-value="false"> {{block[1].label}}</md-checkbox>
-                        <md-checkbox aria-label="aktiveret"  ng-model="myCountry.selected[block[2].id]" ng-true-value="true" ng-false-value="false"> {{block[2].label}}</md-checkbox>
+                    <div layout="row">
+                        <md-checkbox layout="column" flex-gt-sm="65" flex-sm="50"flex="100" aria-label="aktiveret"  ng-model="myCountry.selected[block[0].id]"  ng-true-value="true" ng-false-value="false" >{{block[0].label}}</md-checkbox>
+                        <md-checkbox ng-hide="myCountry.selected[block[1].id] == null" layout="column" flex-gt-sm="65" flex-sm="50"flex="100" aria-label="aktiveret"  ng-model="myCountry.selected[block[1].id]" ng-true-value="true" ng-false-value="false"> {{block[1].label}}</md-checkbox>
+                        <md-checkbox ng-hide="myCountry.selected[block[2].id] == null" layout="column" flex-gt-sm="65" flex-sm="50"flex="100"aria-label="aktiveret"  ng-model="myCountry.selected[block[2].id]" ng-true-value="true" ng-false-value="false"> {{block[2].label}}</md-checkbox>
+                        </div>
 <!--                        <md-checkbox aria-label="aktiveret"  ng-click="vm.clicked(block[1].id)"> {{block[1].name}} {{block[1].id}} </md-checkbox>-->
 <!--                        <md-checkbox aria-label="aktiveret"  ng-click="vm.clicked(block[2].id)"> {{block[2].name}} {{block[2].id}} </md-checkbox>-->
 
