--- a/app/src/declaration/view/psyc/sections/psykunder.html
+++ b/app/src/declaration/view/psyc/sections/psykunder.html
@@ -9,7 +9,7 @@
 
             <md-input-container class="md-block" flex>
                 <label>psykologisk undersøgelsestype</label>
-                <input ng-model="vm.PsycInstruments" maxlength="10" minlength="10" name="cprNo">
+                <input ng-model="vm.PsycInstruments" maxlength="10" minlength="10" name="psychInstruments">
             </md-input-container>
 
             <md-button class="md-icon-button" ng-click="vm.viewButton(vm.PROP_PSYC_LIBRARY_PSYCH_TYPE)" ">
