--- a/app/src/declaration/view/sections/declaration.html
+++ b/app/src/declaration/view/sections/declaration.html
@@ -109,6 +109,7 @@
             </md-item-template>
         </md-autocomplete>
 
+        <div ng-hide="vm.isBua">
         <md-autocomplete flex
             md-selected-item="case.socialworker"
             md-search-text="socialworkerSearch"
@@ -123,7 +124,9 @@
                 <span md-highlight-text="socialworkerSearch" md-highlight-flags="gi">{{socialworker}}</span>
             </md-item-template>
         </md-autocomplete>
+        </div>
 
+        <div ng-hide="vm.isBua">
         <md-autocomplete flex
             md-selected-item="case.secretary"
             md-search-text="secretarySearch"
@@ -138,6 +141,7 @@
                 <span md-highlight-text="secretarySearch" md-highlight-flags="gi">{{secretary}}</span>
             </md-item-template>
         </md-autocomplete>
+        </div>
 
     </md-card-content>
 </md-card>
